# capstone

./: CMakeLists.txt
Certificates/: server.crt  server.key
Client/: CMakeLists.txt
Client/include/: client.h  sys_info.h
Client/src/: client.cpp  main.cpp  sys_info.cpp
Server/: CMakeLists.txt
Server/include/: DatabaseConnector.h  DatabaseHandler.h  DatabaseInitializer.h  DbStructure.h  server.h
Server/src/: DatabaseConnector.cpp  DatabaseHandler.cpp  DatabaseInitializer.cpp  DbStructure.cpp  main.cpp  server.cpp
